--- a/features/home/src/main/res/layout/activity_main.xml
+++ b/features/home/src/main/res/layout/activity_main.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".feature.home.HomeActivity">
+        android:layout_height="match_parent">
 
     <fragment
             android:id="@+id/nav_host_fragment"
@@ -18,6 +15,4 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:defaultNavHost="true"
             app:navGraph="@navigation/nav_graph"/>
-
-
 </merge>
