Rearrange Drawer items.

--- a/common-ui/src/main/res/values-night-v21/styles.xml
+++ b/common-ui/src/main/res/values-night-v21/styles.xml
@@ -3,5 +3,7 @@
 
     <style name="AppTheme" parent="BaseAppTheme">
         <item name="android:navigationBarColor">?colorSurface</item>
+        <item name="material_drawer_divider">@color/drawerSelectedBackgroundColor</item>
+        <item name="material_drawer_secondary_text">@color/drawerTextColor</item>
     </style>
 </resources>
