--- a/features/home/src/main/res/values/ids.xml
+++ b/features/home/src/main/res/values/ids.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="home_drawer_night_mode_switch" type="id" />
+    <item name="home_drawer_region_selection" type="id" />
 </resources>
