Supporting Signing In and Signout in GameDealz

--- a/features/home/src/main/res/values/ids.xml
+++ b/features/home/src/main/res/values/ids.xml
@@ -2,4 +2,7 @@
 <resources>
     <item name="home_drawer_night_mode_switch" type="id" />
     <item name="home_drawer_region_selection" type="id" />
+    <item name="home_drawer_account_main_profile" type="id" />
+    <item name="home_drawer_account_signin" type="id" />
+    <item name="home_drawer_account_logout" type="id" />
 </resources>
